<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:background="@drawable/white_rounded_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/category_naame"
                fontPath="@string/font_quicksand_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/bookedorder"
                android:textColor="@color/hint_light_gray"
                android:textSize="@dimen/dp_22" />


            <TextView
                android:id="@+id/tv_info_detail"
                fontPath="@string/font_quicksand_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_7"
                android:layout_marginEnd="@dimen/dp_7"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginRight="@dimen/dp_7"
                android:layout_marginStart="@dimen/dp_7"
                android:layout_marginTop="@dimen/dp_7"
                android:padding="@dimen/dp_15"
                android:text="@string/content"
                android:textSize="@dimen/dp_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/view"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:gravity="center"
                    android:background="@drawable/cyclindry_shape"
                    fontPath="@string/font_quicksand_medium"
                    android:text="@string/view"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_16" />


                <TextView
                    android:id="@+id/reschdule"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/reschedule"
                    android:background="@drawable/cyclindry_shape"
                    android:textColor="@color/white"
                    android:padding="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_15"
                    fontPath="@string/font_quicksand_medium"
                    android:textSize="@dimen/dp_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_margin="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/select_service"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/cyclindry_shape"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    fontPath="@string/font_quicksand_medium"
                    android:text="@string/select_service"
                    android:textSize="@dimen/dp_16" />



                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/cyclindry_shape"
                    android:padding="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/canceldialog"
                    fontPath="@string/font_quicksand_medium"
                    android:textSize="@dimen/dp_16" />

            </LinearLayout>



        </LinearLayout>


        <!--<TextView-->
        <!--android:id="@+id/textview__header"-->
        <!--fontPath="@string/font_quicksand_medium"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:gravity="center"-->
        <!--android:padding="13dp"-->
        <!--android:text="Alert"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="18sp" />-->

        <!--<RelativeLayout-->
        <!--android:id="@+id/relativelayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.8dp"-->
        <!--android:layout_below="@+id/textview__header"-->
        <!--android:background="@color/soft_gray" />-->

        <!--<RelativeLayout-->
        <!--android:id="@+id/relative_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.8dp"-->
        <!--android:layout_below="@+id/textview__messages"-->
        <!--android:background="@color/soft_gray" />-->


        <!--<TextView-->
        <!--android:id="@+id/textview__new_message"-->
        <!--fontPath="@string/font_quicksand_regular"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/textview__header"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:gravity="center"-->
        <!--android:padding="18sp"-->
        <!--android:text="@string/want_to_logout"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="14sp"-->
        <!--android:visibility="gone" />-->

        <!--<TextView-->
        <!--android:id="@+id/textview__messages"-->
        <!--fontPath="@string/font_quicksand_regular"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/textview__new_message"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:gravity="center"-->
        <!--android:lineSpacingExtra="3dp"-->
        <!--android:padding="18sp"-->
        <!--android:text="@string/want_to_cancel"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="16sp" />-->

        <!--<RelativeLayout-->
        <!--android:id="@+id/rl"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/textview__messages">-->

        <!--<TextView-->
        <!--android:id="@+id/button_cancel"-->
        <!--fontPath="@string/font_quicksand_regular"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_toLeftOf="@+id/framelayout"-->
        <!--android:gravity="center"-->
        <!--android:padding="13sp"-->
        <!--android:text="NO"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="16sp" />-->

        <!--<FrameLayout-->
        <!--android:id="@+id/framelayout"-->
        <!--android:layout_width="0.8dp"-->
        <!--android:layout_height="39sp"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:background="@color/soft_gray"-->
        <!--android:clipToPadding="true"-->
        <!--android:foregroundGravity="center"-->
        <!--android:gravity="center"-->
        <!--android:layoutMode="clipBounds" />-->

        <!--<TextView-->
        <!--android:id="@+id/button_ok"-->
        <!--fontPath="@string/font_quicksand_regular"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_toRightOf="@+id/framelayout"-->
        <!--android:gravity="center"-->
        <!--android:padding="13sp"-->
        <!--android:text="YES"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--android:textSize="16sp" />-->
        <!--</RelativeLayout>-->


    </RelativeLayout>

</RelativeLayout>