<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/splash"
    android:layout_height="match_parent">

    <ImageView
        android:layout_margin="@dimen/dp_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
         />


    <RelativeLayout
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/app_icon"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/target_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/destLogo"
            android:layout_alignLeft="@+id/destLogo"
            android:layout_alignTop="@+id/tv_heading"
            android:layout_marginLeft="53dp"
            android:layout_marginTop="14dp"
            android:background="@mipmap/home"
            android:visibility="gone"
            tools:ignore="NotSibling" />


        <TextView
            android:id="@+id/dialogHeaderText"
            fontPath="@string/font_logo_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_heading"
            android:layout_marginTop="5dp"
            android:text="zomindia"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:visibility="gone" />

    </RelativeLayout>


    <TextView
        fontPath="@string/font_quicksand_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:alpha=".5"
        android:text="@string/please_enter_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@mipmap/app_icon"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/destLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/logo"
        android:layout_alignEnd="@+id/logo"
        android:layout_alignRight="@+id/logo"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="100dp"
        android:background="@mipmap/home"
        android:visibility="gone" />


</RelativeLayout>