<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/rl_add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/white_rounded_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_10">

            <TextView
                fontPath="@string/font_quicksand_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Payment"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/closeImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:padding="@dimen/dp_5"
                android:src="@mipmap/cancel" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/takePhotoRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:gravity="center">


            <RadioGroup
                android:id="@+id/paymentRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RadioButton
                    android:id="@+id/paytmRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@color/soft_gray"
                    android:button="@null"
                    android:checked="false"
                    android:clickable="false"
                    android:visibility="gone"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:drawableLeft="@mipmap/paytm"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:drawablePadding="@dimen/dp_10"
                    android:text="@string/paytm"
                    android:textColor="@color/black"
                    android:textSize="20dip" />

                <RadioButton
                    android:id="@+id/codRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@color/white"
                    android:button="@null"
                    android:clickable="true"
                    android:checked="true"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:drawablePadding="@dimen/dp_10"
                    android:text="@string/cod"
                    android:textColor="@color/black"
                    android:textSize="20dip" />

            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/dp_10">

                <TextView
                    android:id="@+id/totalPriceText"
                    fontPath="@string/font_quicksand_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="Total Price :  500 ₹"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/paymentButton"
                    fontPath="@string/font_quicksand_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/black_custom_toast"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/pay"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>